--- a/pandas/Dataframe_basics_resources/tutorial.ipynb
+++ b/pandas/Dataframe_basics_resources/tutorial.ipynb
@@ -2,127 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "e9f97464",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "df=pd.read_csv(\"movies.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "8cd02189",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>title</th>\n",
-       "      <th>industry</th>\n",
-       "      <th>release_year</th>\n",
-       "      <th>imdb_rating</th>\n",
-       "      <th>studio</th>\n",
-       "      <th>budget</th>\n",
-       "      <th>revenue</th>\n",
-       "      <th>unit</th>\n",
-       "      <th>currency</th>\n",
-       "      <th>language</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Pather Panchali</td>\n",
-       "      <td>Bollywood</td>\n",
-       "      <td>1955</td>\n",
-       "      <td>8.3</td>\n",
-       "      <td>Government of West Bengal</td>\n",
-       "      <td>70000.0</td>\n",
-       "      <td>100000.0</td>\n",
-       "      <td>Thousands</td>\n",
-       "      <td>INR</td>\n",
-       "      <td>Bengali</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Doctor Strange in the Multiverse of Madness</td>\n",
-       "      <td>Hollywood</td>\n",
-       "      <td>2022</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>Marvel Studios</td>\n",
-       "      <td>200.0</td>\n",
-       "      <td>954.8</td>\n",
-       "      <td>Millions</td>\n",
-       "      <td>USD</td>\n",
-       "      <td>English</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Thor: The Dark World</td>\n",
-       "      <td>Hollywood</td>\n",
-       "      <td>2013</td>\n",
-       "      <td>6.8</td>\n",
-       "      <td>Marvel Studios</td>\n",
-       "      <td>165.0</td>\n",
-       "      <td>644.8</td>\n",
-       "      <td>Millions</td>\n",
-       "      <td>USD</td>\n",
-       "      <td>English</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                         title   industry  release_year  \\\n",
-       "0                              Pather Panchali  Bollywood          1955   \n",
-       "1  Doctor Strange in the Multiverse of Madness  Hollywood          2022   \n",
-       "2                        Thor: The Dark World   Hollywood          2013   \n",
-       "\n",
-       "   imdb_rating                     studio   budget   revenue       unit  \\\n",
-       "0          8.3  Government of West Bengal  70000.0  100000.0  Thousands   \n",
-       "1          7.0             Marvel Studios    200.0     954.8   Millions   \n",
-       "2          6.8             Marvel Studios    165.0     644.8   Millions   \n",
-       "\n",
-       "  currency language  \n",
-       "0      INR  Bengali  \n",
-       "1      USD  English  \n",
-       "2      USD  English  "
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df = pd.read_csv(\"movies.csv\")\n",
-    "df.head(3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "c815840c",
    "metadata": {},
    "outputs": [
@@ -132,7 +23,7 @@
        "(37, 10)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "id": "2d902c20",
    "metadata": {},
    "outputs": [
@@ -155,7 +46,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "id": "880cc435",
    "metadata": {},
    "outputs": [
@@ -176,7 +67,7 @@
        "array(['Bollywood', 'Hollywood'], dtype=object)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "id": "200beacf",
    "metadata": {},
    "outputs": [
@@ -197,7 +88,7 @@
        "array(['Bengali', 'English', 'Hindi', 'Kannada', 'Telugu'], dtype=object)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,19 +99,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "id": "50c70963",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
+       "industry\n",
        "Hollywood    20\n",
        "Bollywood    17\n",
-       "Name: industry, dtype: int64"
+       "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,22 +123,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "id": "deee04c7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
+       "language\n",
        "English    20\n",
        "Hindi      12\n",
        "Telugu      3\n",
        "Bengali     1\n",
        "Kannada     1\n",
-       "Name: language, dtype: int64"
+       "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "id": "e31a781f",
    "metadata": {},
    "outputs": [
@@ -555,7 +448,7 @@
        "36                     Baahubali: The Beginning          8.0  Bollywood"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2270,7 +2163,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
