exersice basics pandas completed

--- a/pandas/Dataframe_basics_resources/tutorial.ipynb
+++ b/pandas/Dataframe_basics_resources/tutorial.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "e9f97464",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 67,
    "id": "c815840c",
    "metadata": {},
    "outputs": [
@@ -23,7 +23,7 @@
        "(37, 10)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 68,
    "id": "2d902c20",
    "metadata": {},
    "outputs": [
@@ -46,7 +46,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 69,
    "id": "880cc435",
    "metadata": {},
    "outputs": [
@@ -67,7 +67,7 @@
        "array(['Bollywood', 'Hollywood'], dtype=object)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 70,
    "id": "200beacf",
    "metadata": {},
    "outputs": [
@@ -88,7 +88,7 @@
        "array(['Bengali', 'English', 'Hindi', 'Kannada', 'Telugu'], dtype=object)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 71,
    "id": "50c70963",
    "metadata": {},
    "outputs": [
@@ -112,7 +112,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 72,
    "id": "deee04c7",
    "metadata": {},
    "outputs": [
@@ -139,7 +139,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 73,
    "id": "e31a781f",
    "metadata": {},
    "outputs": [
@@ -448,7 +448,7 @@
        "36                     Baahubali: The Beginning          8.0  Bollywood"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 74,
    "id": "76e6bdb5",
    "metadata": {},
    "outputs": [
@@ -628,7 +628,7 @@
        "26  Vinod Chopra Productions   100.0    410.0  Millions      INR    Hindi  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 75,
    "id": "c016c8e8",
    "metadata": {},
    "outputs": [
@@ -656,7 +656,7 @@
        "       'DVV Entertainment', 'Arka Media Works'], dtype=object)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 76,
    "id": "2c88592f",
    "metadata": {},
    "outputs": [
@@ -835,7 +835,7 @@
        "20          7.8  Marvel Studios   177.0    714.4  Millions      USD  English  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -846,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 77,
    "id": "30949287",
    "metadata": {},
    "outputs": [
@@ -950,7 +950,7 @@
        "max     2022.000000     9.300000  70000.000000  100000.000000"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -961,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 78,
    "id": "22d25a6b",
    "metadata": {
     "scrolled": true
@@ -997,17 +997,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 79,
    "id": "27ac5c7f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "9.3"
+       "np.float64(9.3)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1018,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 80,
    "id": "64ab789b",
    "metadata": {},
    "outputs": [
@@ -1096,7 +1096,7 @@
        "31          Salman Khan Films     1.8      3.1  Billions      INR    Hindi  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1107,7 +1107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 81,
    "id": "e50a382c",
    "metadata": {},
    "outputs": [
@@ -1221,7 +1221,7 @@
        "3      USD  English  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1232,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 92,
    "id": "431adf0d",
    "metadata": {},
    "outputs": [
@@ -1268,6 +1268,7 @@
        "      <th>currency</th>\n",
        "      <th>language</th>\n",
        "      <th>age</th>\n",
+       "      <th>profit</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1284,6 +1285,7 @@
        "      <td>INR</td>\n",
        "      <td>Bengali</td>\n",
        "      <td>68</td>\n",
+       "      <td>30000.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1298,6 +1300,7 @@
        "      <td>USD</td>\n",
        "      <td>English</td>\n",
        "      <td>1</td>\n",
+       "      <td>754.8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1312,6 +1315,7 @@
        "      <td>USD</td>\n",
        "      <td>English</td>\n",
        "      <td>10</td>\n",
+       "      <td>479.8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1326,6 +1330,7 @@
        "      <td>USD</td>\n",
        "      <td>English</td>\n",
        "      <td>6</td>\n",
+       "      <td>674.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1344,14 +1349,14 @@
        "2          6.8             Marvel Studios    165.0     644.8   Millions   \n",
        "3          7.9             Marvel Studios    180.0     854.0   Millions   \n",
        "\n",
-       "  currency language  age  \n",
-       "0      INR  Bengali   68  \n",
-       "1      USD  English    1  \n",
-       "2      USD  English   10  \n",
-       "3      USD  English    6  "
+       "  currency language  age   profit  \n",
+       "0      INR  Bengali   68  30000.0  \n",
+       "1      USD  English    1    754.8  \n",
+       "2      USD  English   10    479.8  \n",
+       "3      USD  English    6    674.0  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1363,7 +1368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 91,
    "id": "3772306c",
    "metadata": {},
    "outputs": [
@@ -1487,7 +1492,7 @@
        "3      USD  English    6    674.0  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1499,7 +1504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 83,
    "id": "2b269b57",
    "metadata": {},
    "outputs": [
@@ -1509,7 +1514,7 @@
        "RangeIndex(start=0, stop=37, step=1)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1520,7 +1525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 97,
    "id": "5b813801",
    "metadata": {},
    "outputs": [],
@@ -1530,7 +1535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 85,
    "id": "161b77fe",
    "metadata": {
     "scrolled": true
@@ -1567,11 +1572,9 @@
        "      <th>currency</th>\n",
        "      <th>language</th>\n",
        "      <th>age</th>\n",
-       "      <th>profit</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>title</th>\n",
-       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -1597,7 +1600,6 @@
        "      <td>INR</td>\n",
        "      <td>Bengali</td>\n",
        "      <td>68</td>\n",
-       "      <td>30000.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Doctor Strange in the Multiverse of Madness</th>\n",
@@ -1611,7 +1613,6 @@
        "      <td>USD</td>\n",
        "      <td>English</td>\n",
        "      <td>1</td>\n",
-       "      <td>754.8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Thor: The Dark World</th>\n",
@@ -1625,7 +1626,6 @@
        "      <td>USD</td>\n",
        "      <td>English</td>\n",
        "      <td>10</td>\n",
-       "      <td>479.8</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1656,14 +1656,14 @@
        "Doctor Strange in the Multiverse of Madness    200.0     954.8   Millions   \n",
        "Thor: The Dark World                           165.0     644.8   Millions   \n",
        "\n",
-       "                                            currency language  age   profit  \n",
-       "title                                                                        \n",
-       "Pather Panchali                                  INR  Bengali   68  30000.0  \n",
-       "Doctor Strange in the Multiverse of Madness      USD  English    1    754.8  \n",
-       "Thor: The Dark World                             USD  English   10    479.8  "
+       "                                            currency language  age  \n",
+       "title                                                               \n",
+       "Pather Panchali                                  INR  Bengali   68  \n",
+       "Doctor Strange in the Multiverse of Madness      USD  English    1  \n",
+       "Thor: The Dark World                             USD  English   10  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1674,7 +1674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 95,
    "id": "36341d3f",
    "metadata": {
     "scrolled": true
@@ -1683,23 +1683,10 @@
     {
      "data": {
       "text/plain": [
-       "Index(['Pather Panchali', 'Doctor Strange in the Multiverse of Madness',\n",
-       "       'Thor: The Dark World ', 'Thor: Ragnarok ', 'Thor: Love and Thunder ',\n",
-       "       'The Shawshank Redemption', 'Interstellar', 'The Pursuit of Happyness',\n",
-       "       'Gladiator', 'Titanic', 'It's a Wonderful Life', 'Avatar',\n",
-       "       'The Godfather', 'The Dark Knight', 'Schindler's List', 'Jurassic Park',\n",
-       "       'Parasite', 'Avengers: Endgame', 'Avengers: Infinity War',\n",
-       "       'Captain America: The First Avenger',\n",
-       "       'Captain America: The Winter Soldier', 'Dilwale Dulhania Le Jayenge',\n",
-       "       '3 Idiots', 'Kabhi Khushi Kabhie Gham', 'Bajirao Mastani ',\n",
-       "       'Taare Zameen Par', 'Munna Bhai M.B.B.S.', 'PK', 'Sanju',\n",
-       "       'The Kashmir Files', 'Bajrangi Bhaijaan', 'Race 3', 'Shershaah',\n",
-       "       'K.G.F: Chapter 2', 'Pushpa: The Rise - Part 1', 'RRR',\n",
-       "       'Baahubali: The Beginning'],\n",
-       "      dtype='object', name='title')"
+       "RangeIndex(start=0, stop=37, step=1)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1710,7 +1697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 87,
    "id": "08ad186a",
    "metadata": {},
    "outputs": [
@@ -1727,11 +1714,10 @@
        "currency                              INR\n",
        "language                          Bengali\n",
        "age                                    68\n",
-       "profit                            30000.0\n",
        "Name: Pather Panchali, dtype: object"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1742,7 +1728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 98,
    "id": "365f8b99",
    "metadata": {},
    "outputs": [
@@ -1854,7 +1840,7 @@
        "Doctor Strange in the Multiverse of Madness      USD  English    1    754.8  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1865,7 +1851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 99,
    "id": "f041e715",
    "metadata": {},
    "outputs": [
@@ -2001,7 +1987,7 @@
        "The Shawshank Redemption  Millions      USD  English   29    48.3  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2012,7 +1998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 90,
    "id": "de538321",
    "metadata": {},
    "outputs": [
@@ -2048,7 +2034,6 @@
        "      <th>currency</th>\n",
        "      <th>language</th>\n",
        "      <th>age</th>\n",
-       "      <th>profit</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -2065,7 +2050,6 @@
        "      <td>INR</td>\n",
        "      <td>Bengali</td>\n",
        "      <td>68</td>\n",
-       "      <td>30000.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -2080,7 +2064,6 @@
        "      <td>USD</td>\n",
        "      <td>English</td>\n",
        "      <td>1</td>\n",
-       "      <td>754.8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -2095,7 +2078,6 @@
        "      <td>USD</td>\n",
        "      <td>English</td>\n",
        "      <td>10</td>\n",
-       "      <td>479.8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -2110,7 +2092,6 @@
        "      <td>USD</td>\n",
        "      <td>English</td>\n",
        "      <td>6</td>\n",
-       "      <td>674.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2129,14 +2110,14 @@
        "2          6.8             Marvel Studios    165.0     644.8   Millions   \n",
        "3          7.9             Marvel Studios    180.0     854.0   Millions   \n",
        "\n",
-       "  currency language  age   profit  \n",
-       "0      INR  Bengali   68  30000.0  \n",
-       "1      USD  English    1    754.8  \n",
-       "2      USD  English   10    479.8  \n",
-       "3      USD  English    6    674.0  "
+       "  currency language  age  \n",
+       "0      INR  Bengali   68  \n",
+       "1      USD  English    1  \n",
+       "2      USD  English   10  \n",
+       "3      USD  English    6  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
