completed read write csv exercises

--- a/pandas/Intro_to_pandas_resources/pandas_intro_movies_final.ipynb
+++ b/pandas/Intro_to_pandas_resources/pandas_intro_movies_final.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "807cb815",
    "metadata": {},
    "outputs": [],
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "68b5025f",
    "metadata": {},
    "outputs": [
@@ -122,7 +122,7 @@
        "      <th>revenue</th>\n",
        "      <th>unit</th>\n",
        "      <th>currency</th>\n",
-       "      <th>name</th>\n",
+       "      <th>language</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -210,7 +210,7 @@
        "3          7.9             Marvel Studios    180.0     854.0   Millions   \n",
        "4          6.8             Marvel Studios    250.0     670.0   Millions   \n",
        "\n",
-       "  currency     name  \n",
+       "  currency language  \n",
        "0      INR  Bengali  \n",
        "1      USD  English  \n",
        "2      USD  English  \n",
@@ -218,7 +218,7 @@
        "4      USD  English  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1477,7 +1477,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
