--- a/pandas/Read_write_to_excel_resources/read_write_csv_excel_final.ipynb
+++ b/pandas/Read_write_to_excel_resources/read_write_csv_excel_final.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -120,7 +120,7 @@
        "5     ratan tata  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,107 +134,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>tickers</th>\n",
-       "      <th>eps</th>\n",
-       "      <th>revenue</th>\n",
-       "      <th>price</th>\n",
-       "      <th>people</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>GOOGL</td>\n",
-       "      <td>27.82</td>\n",
-       "      <td>87</td>\n",
-       "      <td>845</td>\n",
-       "      <td>larry page</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>WMT</td>\n",
-       "      <td>4.61</td>\n",
-       "      <td>484</td>\n",
-       "      <td>65</td>\n",
-       "      <td>n.a.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>MSFT</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>85</td>\n",
-       "      <td>64</td>\n",
-       "      <td>bill gates</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>RIL</td>\n",
-       "      <td>not available</td>\n",
-       "      <td>50</td>\n",
-       "      <td>1023</td>\n",
-       "      <td>mukesh ambani</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>TATA</td>\n",
-       "      <td>5.6</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>n.a.</td>\n",
-       "      <td>ratan tata</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  tickers            eps  revenue price         people\n",
-       "0   GOOGL          27.82       87   845     larry page\n",
-       "1     WMT           4.61      484    65           n.a.\n",
-       "2    MSFT             -1       85    64     bill gates\n",
-       "3    RIL   not available       50  1023  mukesh ambani\n",
-       "4    TATA            5.6       -1  n.a.     ratan tata"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df = pd.read_csv(\"stock_data.csv\", skiprows=1)\n",
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -324,13 +227,110 @@
     }
    ],
    "source": [
+    "df = pd.read_csv(\"stock_data.csv\", skiprows=1)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tickers</th>\n",
+       "      <th>eps</th>\n",
+       "      <th>revenue</th>\n",
+       "      <th>price</th>\n",
+       "      <th>people</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>GOOGL</td>\n",
+       "      <td>27.82</td>\n",
+       "      <td>87</td>\n",
+       "      <td>845</td>\n",
+       "      <td>larry page</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>WMT</td>\n",
+       "      <td>4.61</td>\n",
+       "      <td>484</td>\n",
+       "      <td>65</td>\n",
+       "      <td>n.a.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>MSFT</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>85</td>\n",
+       "      <td>64</td>\n",
+       "      <td>bill gates</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>RIL</td>\n",
+       "      <td>not available</td>\n",
+       "      <td>50</td>\n",
+       "      <td>1023</td>\n",
+       "      <td>mukesh ambani</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>TATA</td>\n",
+       "      <td>5.6</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>n.a.</td>\n",
+       "      <td>ratan tata</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  tickers            eps  revenue price         people\n",
+       "0   GOOGL          27.82       87   845     larry page\n",
+       "1     WMT           4.61      484    65           n.a.\n",
+       "2    MSFT             -1       85    64     bill gates\n",
+       "3    RIL   not available       50  1023  mukesh ambani\n",
+       "4    TATA            5.6       -1  n.a.     ratan tata"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "df = pd.read_csv(\"stock_data.csv\", header=1) # skiprows and header are kind of same\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +415,7 @@
        "4         TATA            5.6       -1  n.a.     ratan tata"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -487,7 +487,7 @@
        "1     WMT   4.61      484     65        n.a."
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "metadata": {
     "scrolled": false
    },
@@ -586,7 +586,7 @@
        "4    TATA   5.60      NaN  n.a.     ratan tata"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -602,10 +602,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {
-    "scrolled": false
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -689,7 +687,7 @@
        "4    TATA   5.60       -1     NaN     ratan tata"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -700,58 +698,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### <font color=\"blue\">Write to CSV</color>"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\dhava\\AppData\\Local\\Temp\\ipykernel_1396\\435273397.py:2: RuntimeWarning: divide by zero encountered in divide\n",
-      "  np.divide(1,0)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "inf"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "np.divide(1,0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "\n",
-    "def safe_divide(x, y):\n",
-    "    if pd.isna(x) or pd.isna(y):\n",
-    "        return np.NaN\n",
-    "    return np.divide(float(x),float(y))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -780,7 +728,6 @@
        "      <th>revenue</th>\n",
        "      <th>price</th>\n",
        "      <th>people</th>\n",
-       "      <th>pe</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -788,95 +735,63 @@
        "      <th>0</th>\n",
        "      <td>GOOGL</td>\n",
        "      <td>27.82</td>\n",
-       "      <td>87</td>\n",
-       "      <td>845.0</td>\n",
+       "      <td>87.0</td>\n",
+       "      <td>845</td>\n",
        "      <td>larry page</td>\n",
-       "      <td>30.373832</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>WMT</td>\n",
        "      <td>4.61</td>\n",
-       "      <td>484</td>\n",
-       "      <td>65.0</td>\n",
+       "      <td>484.0</td>\n",
+       "      <td>65</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>14.099783</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>MSFT</td>\n",
        "      <td>-1.00</td>\n",
-       "      <td>85</td>\n",
-       "      <td>64.0</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>64</td>\n",
        "      <td>bill gates</td>\n",
-       "      <td>-64.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>RIL</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>50</td>\n",
-       "      <td>1023.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>1023</td>\n",
        "      <td>mukesh ambani</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>TATA</td>\n",
        "      <td>5.60</td>\n",
-       "      <td>-1</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>n.a.</td>\n",
        "      <td>ratan tata</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  tickers    eps  revenue   price         people         pe\n",
-       "0   GOOGL  27.82       87   845.0     larry page  30.373832\n",
-       "1     WMT   4.61      484    65.0            NaN  14.099783\n",
-       "2    MSFT  -1.00       85    64.0     bill gates -64.000000\n",
-       "3    RIL     NaN       50  1023.0  mukesh ambani        NaN\n",
-       "4    TATA   5.60       -1     NaN     ratan tata        NaN"
+       "  tickers    eps  revenue price         people\n",
+       "0   GOOGL  27.82     87.0   845     larry page\n",
+       "1     WMT   4.61    484.0    65            NaN\n",
+       "2    MSFT  -1.00     85.0    64     bill gates\n",
+       "3    RIL     NaN     50.0  1023  mukesh ambani\n",
+       "4    TATA   5.60      NaN  n.a.     ratan tata"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[\"pe\"] = df.apply(lambda x: safe_divide(x[\"price\"], x[\"eps\"]), axis=1)\n",
+    "df.to_csv(\"pe2.csv\", columns=[\"tickers\",\"price\"], index=False)\n",
     "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.to_csv(\"pe.csv\", index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.to_csv(\"pe1.csv\",header=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.to_csv(\"pe2.csv\", columns=[\"tickers\",\"price\"], index=False)"
    ]
   },
   {
@@ -888,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -980,7 +895,7 @@
        "3          2017          7.9  Marvel Studios            5  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -993,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -1092,7 +1007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -1179,7 +1094,7 @@
        "4       105   250.0    670.0  Millions      USD"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1205,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1359,7 +1274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -1377,7 +1292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -1399,7 +1314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
