--- a/pandas/Handling_missing_data_fillna_dropna_interpolate_resources/handling_missing_data_fillna_dropna_final.ipynb
+++ b/pandas/Handling_missing_data_fillna_dropna_interpolate_resources/handling_missing_data_fillna_dropna_final.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -17,10 +17,10 @@
     {
      "data": {
       "text/plain": [
-       "numpy.float64"
+       "pandas._libs.tslibs.timestamps.Timestamp"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -28,7 +28,7 @@
    "source": [
     "import pandas as pd\n",
     "df = pd.read_csv(\"weather_data.csv\",parse_dates=['day'])\n",
-    "type(df.temperature[0])"
+    "type(df.day[0])\n"
    ]
   },
   {
@@ -682,6 +682,16 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\vinod\\AppData\\Local\\Temp\\ipykernel_16460\\3318019960.py:1: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "  new_df = df.fillna(method=\"bfill\", axis=\"columns\") # axis is either \"index\" or \"columns\"\n",
+      "C:\\Users\\vinod\\AppData\\Local\\Temp\\ipykernel_16460\\3318019960.py:1: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "  new_df = df.fillna(method=\"bfill\", axis=\"columns\") # axis is either \"index\" or \"columns\"\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
        "<div>\n",
@@ -702,68 +712,72 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>day</th>\n",
        "      <th>temperature</th>\n",
        "      <th>windspeed</th>\n",
        "      <th>event</th>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>day</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2017-01-01</th>\n",
+       "      <th>0</th>\n",
+       "      <td>2017-01-01 00:00:00</td>\n",
        "      <td>32.0</td>\n",
        "      <td>6.0</td>\n",
        "      <td>Rain</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2017-01-04</th>\n",
+       "      <th>1</th>\n",
+       "      <td>2017-01-04 00:00:00</td>\n",
        "      <td>9.0</td>\n",
        "      <td>9.0</td>\n",
        "      <td>Sunny</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2017-01-05</th>\n",
+       "      <th>2</th>\n",
+       "      <td>2017-01-05 00:00:00</td>\n",
        "      <td>28.0</td>\n",
        "      <td>Snow</td>\n",
        "      <td>Snow</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2017-01-06</th>\n",
+       "      <th>3</th>\n",
+       "      <td>2017-01-06 00:00:00</td>\n",
        "      <td>7.0</td>\n",
        "      <td>7.0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2017-01-07</th>\n",
+       "      <th>4</th>\n",
+       "      <td>2017-01-07 00:00:00</td>\n",
        "      <td>32.0</td>\n",
        "      <td>Rain</td>\n",
        "      <td>Rain</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2017-01-08</th>\n",
+       "      <th>5</th>\n",
+       "      <td>2017-01-08 00:00:00</td>\n",
        "      <td>Sunny</td>\n",
        "      <td>Sunny</td>\n",
        "      <td>Sunny</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2017-01-09</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>6</th>\n",
+       "      <td>2017-01-09 00:00:00</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2017-01-10</th>\n",
-       "      <td>34.0</td>\n",
-       "      <td>8.0</td>\n",
+       "      <th>7</th>\n",
+       "      <td>2017-01-10 00:00:00</td>\n",
+       "      <td>34.1</td>\n",
+       "      <td>8.1</td>\n",
        "      <td>Cloudy</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2017-01-11</th>\n",
+       "      <th>8</th>\n",
+       "      <td>2017-01-11 00:00:00</td>\n",
        "      <td>40.0</td>\n",
        "      <td>12.0</td>\n",
        "      <td>Sunny</td>\n",
@@ -773,17 +787,16 @@
        "</div>"
       ],
       "text/plain": [
-       "           temperature windspeed   event\n",
-       "day                                     \n",
-       "2017-01-01        32.0       6.0    Rain\n",
-       "2017-01-04         9.0       9.0   Sunny\n",
-       "2017-01-05        28.0      Snow    Snow\n",
-       "2017-01-06         7.0       7.0     NaN\n",
-       "2017-01-07        32.0      Rain    Rain\n",
-       "2017-01-08       Sunny     Sunny   Sunny\n",
-       "2017-01-09         NaN       NaN     NaN\n",
-       "2017-01-10        34.0       8.0  Cloudy\n",
-       "2017-01-11        40.0      12.0   Sunny"
+       "                   day temperature windspeed   event\n",
+       "0  2017-01-01 00:00:00        32.0       6.0    Rain\n",
+       "1  2017-01-04 00:00:00         9.0       9.0   Sunny\n",
+       "2  2017-01-05 00:00:00        28.0      Snow    Snow\n",
+       "3  2017-01-06 00:00:00         7.0       7.0     NaN\n",
+       "4  2017-01-07 00:00:00        32.0      Rain    Rain\n",
+       "5  2017-01-08 00:00:00       Sunny     Sunny   Sunny\n",
+       "6  2017-01-09 00:00:00         NaT       NaT     NaT\n",
+       "7  2017-01-10 00:00:00        34.1       8.1  Cloudy\n",
+       "8  2017-01-11 00:00:00        40.0      12.0   Sunny"
       ]
      },
      "execution_count": 9,
@@ -1061,6 +1074,81 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>day</th>\n",
+       "      <th>temperature</th>\n",
+       "      <th>windspeed</th>\n",
+       "      <th>event</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2017-01-01</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>Rain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2017-01-10</td>\n",
+       "      <td>34.1</td>\n",
+       "      <td>8.1</td>\n",
+       "      <td>Cloudy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2017-01-11</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>Sunny</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         day  temperature  windspeed   event\n",
+       "0 2017-01-01         32.0        6.0    Rain\n",
+       "7 2017-01-10         34.1        8.1  Cloudy\n",
+       "8 2017-01-11         40.0       12.0   Sunny"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_df = df.dropna()\n",
+    "new_df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [
@@ -1085,140 +1173,72 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>day</th>\n",
        "      <th>temperature</th>\n",
        "      <th>windspeed</th>\n",
        "      <th>event</th>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>day</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2017-01-01</th>\n",
+       "      <th>0</th>\n",
+       "      <td>2017-01-01</td>\n",
        "      <td>32.0</td>\n",
        "      <td>6.0</td>\n",
        "      <td>Rain</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2017-01-10</th>\n",
-       "      <td>34.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>Cloudy</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2017-01-11</th>\n",
-       "      <td>40.0</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>Sunny</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            temperature  windspeed   event\n",
-       "day                                       \n",
-       "2017-01-01         32.0        6.0    Rain\n",
-       "2017-01-10         34.0        8.0  Cloudy\n",
-       "2017-01-11         40.0       12.0   Sunny"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "new_df = df.dropna()\n",
-    "new_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>temperature</th>\n",
-       "      <th>windspeed</th>\n",
-       "      <th>event</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>day</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2017-01-01</th>\n",
-       "      <td>32.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>Rain</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2017-01-04</th>\n",
+       "      <th>1</th>\n",
+       "      <td>2017-01-04</td>\n",
        "      <td>NaN</td>\n",
        "      <td>9.0</td>\n",
        "      <td>Sunny</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2017-01-05</th>\n",
+       "      <th>2</th>\n",
+       "      <td>2017-01-05</td>\n",
        "      <td>28.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>Snow</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2017-01-06</th>\n",
+       "      <th>3</th>\n",
+       "      <td>2017-01-06</td>\n",
        "      <td>NaN</td>\n",
        "      <td>7.0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2017-01-07</th>\n",
+       "      <th>4</th>\n",
+       "      <td>2017-01-07</td>\n",
        "      <td>32.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>Rain</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2017-01-08</th>\n",
+       "      <th>5</th>\n",
+       "      <td>2017-01-08</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>Sunny</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2017-01-10</th>\n",
-       "      <td>34.0</td>\n",
-       "      <td>8.0</td>\n",
+       "      <th>6</th>\n",
+       "      <td>2017-01-09</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2017-01-10</td>\n",
+       "      <td>34.1</td>\n",
+       "      <td>8.1</td>\n",
        "      <td>Cloudy</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2017-01-11</th>\n",
+       "      <th>8</th>\n",
+       "      <td>2017-01-11</td>\n",
        "      <td>40.0</td>\n",
        "      <td>12.0</td>\n",
        "      <td>Sunny</td>\n",
@@ -1228,19 +1248,19 @@
        "</div>"
       ],
       "text/plain": [
-       "            temperature  windspeed   event\n",
-       "day                                       \n",
-       "2017-01-01         32.0        6.0    Rain\n",
-       "2017-01-04          NaN        9.0   Sunny\n",
-       "2017-01-05         28.0        NaN    Snow\n",
-       "2017-01-06          NaN        7.0     NaN\n",
-       "2017-01-07         32.0        NaN    Rain\n",
-       "2017-01-08          NaN        NaN   Sunny\n",
-       "2017-01-10         34.0        8.0  Cloudy\n",
-       "2017-01-11         40.0       12.0   Sunny"
+       "         day  temperature  windspeed   event\n",
+       "0 2017-01-01         32.0        6.0    Rain\n",
+       "1 2017-01-04          NaN        9.0   Sunny\n",
+       "2 2017-01-05         28.0        NaN    Snow\n",
+       "3 2017-01-06          NaN        7.0     NaN\n",
+       "4 2017-01-07         32.0        NaN    Rain\n",
+       "5 2017-01-08          NaN        NaN   Sunny\n",
+       "6 2017-01-09          NaN        NaN     NaN\n",
+       "7 2017-01-10         34.1        8.1  Cloudy\n",
+       "8 2017-01-11         40.0       12.0   Sunny"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1252,7 +1272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "metadata": {
     "scrolled": true
    },
@@ -1278,50 +1298,65 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>day</th>\n",
        "      <th>temperature</th>\n",
        "      <th>windspeed</th>\n",
        "      <th>event</th>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>day</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2017-01-01</th>\n",
+       "      <th>0</th>\n",
+       "      <td>2017-01-01</td>\n",
        "      <td>32.0</td>\n",
        "      <td>6.0</td>\n",
        "      <td>Rain</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2017-01-04</th>\n",
+       "      <th>1</th>\n",
+       "      <td>2017-01-04</td>\n",
        "      <td>NaN</td>\n",
        "      <td>9.0</td>\n",
        "      <td>Sunny</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2017-01-05</th>\n",
+       "      <th>2</th>\n",
+       "      <td>2017-01-05</td>\n",
        "      <td>28.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>Snow</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2017-01-07</th>\n",
+       "      <th>3</th>\n",
+       "      <td>2017-01-06</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2017-01-07</td>\n",
        "      <td>32.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>Rain</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2017-01-10</th>\n",
-       "      <td>34.0</td>\n",
-       "      <td>8.0</td>\n",
+       "      <th>5</th>\n",
+       "      <td>2017-01-08</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Sunny</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2017-01-10</td>\n",
+       "      <td>34.1</td>\n",
+       "      <td>8.1</td>\n",
        "      <td>Cloudy</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2017-01-11</th>\n",
+       "      <th>8</th>\n",
+       "      <td>2017-01-11</td>\n",
        "      <td>40.0</td>\n",
        "      <td>12.0</td>\n",
        "      <td>Sunny</td>\n",
@@ -1331,17 +1366,18 @@
        "</div>"
       ],
       "text/plain": [
-       "            temperature  windspeed   event\n",
-       "day                                       \n",
-       "2017-01-01         32.0        6.0    Rain\n",
-       "2017-01-04          NaN        9.0   Sunny\n",
-       "2017-01-05         28.0        NaN    Snow\n",
-       "2017-01-07         32.0        NaN    Rain\n",
-       "2017-01-10         34.0        8.0  Cloudy\n",
-       "2017-01-11         40.0       12.0   Sunny"
+       "         day  temperature  windspeed   event\n",
+       "0 2017-01-01         32.0        6.0    Rain\n",
+       "1 2017-01-04          NaN        9.0   Sunny\n",
+       "2 2017-01-05         28.0        NaN    Snow\n",
+       "3 2017-01-06          NaN        7.0     NaN\n",
+       "4 2017-01-07         32.0        NaN    Rain\n",
+       "5 2017-01-08          NaN        NaN   Sunny\n",
+       "7 2017-01-10         34.1        8.1  Cloudy\n",
+       "8 2017-01-11         40.0       12.0   Sunny"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1369,7 +1405,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
