missing part 2 ecercise complete

--- a/pandas/Handling_missing_data_replace_2/handling_missing_data_replace_final.ipynb
+++ b/pandas/Handling_missing_data_replace_2/handling_missing_data_replace_final.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -106,7 +106,7 @@
        "6  1/6/2017           34     -88888  no event"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -660,7 +660,7 @@
        "      <th>6</th>\n",
        "      <td>1/6/2017</td>\n",
        "      <td>34.0</td>\n",
-       "      <td>-88888.0</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>Sunny</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -675,10 +675,10 @@
        "3  1/4/2017          NaN        7.0  Sunny\n",
        "4  1/5/2017         32.0        NaN   Rain\n",
        "5  1/6/2017         31.0        2.0  Sunny\n",
-       "6  1/6/2017         34.0   -88888.0  Sunny"
+       "6  1/6/2017         34.0        NaN  Sunny"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -687,6 +687,7 @@
     "new_df = df.replace({\n",
     "        -99999: np.nan,\n",
     "        'no event': 'Sunny',\n",
+    "        -88888.0:np.nan\n",
     "    })\n",
     "new_df"
    ]
