completed remaining pandas exercises

--- a/pandas/Handle_missing_data_2_Exercise/handling_missing_data_replace_exercise_solution.ipynb
+++ b/pandas/Handle_missing_data_2_Exercise/handling_missing_data_replace_exercise_solution.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "5e864399",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "6a66d5a4",
    "metadata": {},
    "outputs": [
@@ -179,7 +179,7 @@
        "9       10           Lassi       5%   $3.50    Average"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "6eb62dbc",
    "metadata": {},
    "outputs": [
@@ -339,7 +339,7 @@
        "9       10           Lassi      13%   $3.50    Average"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,10 +366,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "40827d70",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\vinod\\AppData\\Local\\Temp\\ipykernel_20596\\1830987077.py:2: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "  new_df = df.replace(['Excellent', 'Very Good', 'Good', 'Average'], [4,3,2,1])\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -497,7 +505,7 @@
        "9       10           Lassi       5%   $3.50       1"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
