completed exercises on central tendency and dispersion

--- a/MATHS AND STATS FOR AI/MathsnStats_Exercise1/exercise_solution.ipynb
+++ b/MATHS AND STATS FOR AI/MathsnStats_Exercise1/exercise_solution.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
        "      <th>multiple_lines</th>\n",
        "      <th>internet_service</th>\n",
        "      <th>online_security</th>\n",
-       "      <th>online_backup</th>\n",
+       "      <th>...</th>\n",
        "      <th>device_protection</th>\n",
        "      <th>tech_support</th>\n",
        "      <th>streaming_tv</th>\n",
@@ -108,7 +108,7 @@
        "      <td>No phone service</td>\n",
        "      <td>DSL</td>\n",
        "      <td>No</td>\n",
-       "      <td>Yes</td>\n",
+       "      <td>...</td>\n",
        "      <td>No</td>\n",
        "      <td>No</td>\n",
        "      <td>No</td>\n",
@@ -132,7 +132,7 @@
        "      <td>No</td>\n",
        "      <td>DSL</td>\n",
        "      <td>Yes</td>\n",
-       "      <td>No</td>\n",
+       "      <td>...</td>\n",
        "      <td>Yes</td>\n",
        "      <td>No</td>\n",
        "      <td>No</td>\n",
@@ -156,7 +156,7 @@
        "      <td>No</td>\n",
        "      <td>DSL</td>\n",
        "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
+       "      <td>...</td>\n",
        "      <td>No</td>\n",
        "      <td>No</td>\n",
        "      <td>No</td>\n",
@@ -180,7 +180,7 @@
        "      <td>No phone service</td>\n",
        "      <td>DSL</td>\n",
        "      <td>Yes</td>\n",
-       "      <td>No</td>\n",
+       "      <td>...</td>\n",
        "      <td>Yes</td>\n",
        "      <td>Yes</td>\n",
        "      <td>No</td>\n",
@@ -204,7 +204,7 @@
        "      <td>No</td>\n",
        "      <td>Fiber optic</td>\n",
        "      <td>No</td>\n",
-       "      <td>No</td>\n",
+       "      <td>...</td>\n",
        "      <td>No</td>\n",
        "      <td>No</td>\n",
        "      <td>No</td>\n",
@@ -218,6 +218,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>5 rows × 21 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -228,19 +229,19 @@
        "3  7795-CFOCW    Male               0      No         No      45   \n",
        "4  9237-HQITU  Female               0      No         No       2   \n",
        "\n",
-       "  phone_service    multiple_lines internet_service online_security  \\\n",
-       "0            No  No phone service              DSL              No   \n",
-       "1           Yes                No              DSL             Yes   \n",
-       "2           Yes                No              DSL             Yes   \n",
-       "3            No  No phone service              DSL             Yes   \n",
-       "4           Yes                No      Fiber optic              No   \n",
+       "  phone_service    multiple_lines internet_service online_security  ...  \\\n",
+       "0            No  No phone service              DSL              No  ...   \n",
+       "1           Yes                No              DSL             Yes  ...   \n",
+       "2           Yes                No              DSL             Yes  ...   \n",
+       "3            No  No phone service              DSL             Yes  ...   \n",
+       "4           Yes                No      Fiber optic              No  ...   \n",
        "\n",
-       "  online_backup device_protection tech_support streaming_tv streaming_movies  \\\n",
-       "0           Yes                No           No           No               No   \n",
-       "1            No               Yes           No           No               No   \n",
-       "2           Yes                No           No           No               No   \n",
-       "3            No               Yes          Yes           No               No   \n",
-       "4            No                No           No           No               No   \n",
+       "  device_protection tech_support streaming_tv streaming_movies  \\\n",
+       "0                No           No           No               No   \n",
+       "1               Yes           No           No               No   \n",
+       "2                No           No           No               No   \n",
+       "3               Yes          Yes           No               No   \n",
+       "4                No           No           No               No   \n",
        "\n",
        "         contract paperless_billing             payment_method  \\\n",
        "0  Month-to-month               Yes           Electronic check   \n",
@@ -249,15 +250,17 @@
        "3        One year                No  Bank transfer (automatic)   \n",
        "4  Month-to-month               Yes           Electronic check   \n",
        "\n",
-       "   monthly_charges total_charges churn  \n",
-       "0            29.85         29.85    No  \n",
-       "1            56.95        1889.5    No  \n",
-       "2            53.85        108.15   Yes  \n",
-       "3            42.30       1840.75    No  \n",
-       "4            70.70        151.65   Yes  "
+       "  monthly_charges  total_charges churn  \n",
+       "0           29.85          29.85    No  \n",
+       "1           56.95         1889.5    No  \n",
+       "2           53.85         108.15   Yes  \n",
+       "3           42.30        1840.75    No  \n",
+       "4           70.70         151.65   Yes  \n",
+       "\n",
+       "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -646,7 +649,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
