--- a/MATHS AND STATS FOR AI/MathsnStats_Exercise1/exercise.ipynb
+++ b/MATHS AND STATS FOR AI/MathsnStats_Exercise1/exercise.ipynb
@@ -29,65 +29,365 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#import necessary libraries\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#1. import the provided dataset to dataframe (telecom_customer_churn.csv)\n",
-    "#2. change the settings to display all the columns\n",
-    "#3. check the number of rows and columns\n",
-    "#4. check the top 5 rows\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#display all the column names\n",
-    "\n"
+    "#import necessary libraries\n",
+    "import pandas as pd\n",
+    "import numpy as np\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>customer_id</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>senior_citizen</th>\n",
+       "      <th>partner</th>\n",
+       "      <th>dependents</th>\n",
+       "      <th>tenure</th>\n",
+       "      <th>phone_service</th>\n",
+       "      <th>multiple_lines</th>\n",
+       "      <th>internet_service</th>\n",
+       "      <th>online_security</th>\n",
+       "      <th>...</th>\n",
+       "      <th>device_protection</th>\n",
+       "      <th>tech_support</th>\n",
+       "      <th>streaming_tv</th>\n",
+       "      <th>streaming_movies</th>\n",
+       "      <th>contract</th>\n",
+       "      <th>paperless_billing</th>\n",
+       "      <th>payment_method</th>\n",
+       "      <th>monthly_charges</th>\n",
+       "      <th>total_charges</th>\n",
+       "      <th>churn</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>7590-VHVEG</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
+       "      <td>1</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No phone service</td>\n",
+       "      <td>DSL</td>\n",
+       "      <td>No</td>\n",
+       "      <td>...</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Month-to-month</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Electronic check</td>\n",
+       "      <td>29.85</td>\n",
+       "      <td>29.85</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>5575-GNVDE</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>34</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
+       "      <td>DSL</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>One year</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Mailed check</td>\n",
+       "      <td>56.95</td>\n",
+       "      <td>1889.5</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3668-QPYBK</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
+       "      <td>DSL</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>...</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Month-to-month</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Mailed check</td>\n",
+       "      <td>53.85</td>\n",
+       "      <td>108.15</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>7795-CFOCW</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>45</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No phone service</td>\n",
+       "      <td>DSL</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>One year</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Bank transfer (automatic)</td>\n",
+       "      <td>42.30</td>\n",
+       "      <td>1840.75</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>9237-HQITU</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Fiber optic</td>\n",
+       "      <td>No</td>\n",
+       "      <td>...</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Month-to-month</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Electronic check</td>\n",
+       "      <td>70.70</td>\n",
+       "      <td>151.65</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  customer_id  gender  senior_citizen partner dependents  tenure  \\\n",
+       "0  7590-VHVEG  Female               0     Yes         No       1   \n",
+       "1  5575-GNVDE    Male               0      No         No      34   \n",
+       "2  3668-QPYBK    Male               0      No         No       2   \n",
+       "3  7795-CFOCW    Male               0      No         No      45   \n",
+       "4  9237-HQITU  Female               0      No         No       2   \n",
+       "\n",
+       "  phone_service    multiple_lines internet_service online_security  ...  \\\n",
+       "0            No  No phone service              DSL              No  ...   \n",
+       "1           Yes                No              DSL             Yes  ...   \n",
+       "2           Yes                No              DSL             Yes  ...   \n",
+       "3            No  No phone service              DSL             Yes  ...   \n",
+       "4           Yes                No      Fiber optic              No  ...   \n",
+       "\n",
+       "  device_protection tech_support streaming_tv streaming_movies  \\\n",
+       "0                No           No           No               No   \n",
+       "1               Yes           No           No               No   \n",
+       "2                No           No           No               No   \n",
+       "3               Yes          Yes           No               No   \n",
+       "4                No           No           No               No   \n",
+       "\n",
+       "         contract paperless_billing             payment_method  \\\n",
+       "0  Month-to-month               Yes           Electronic check   \n",
+       "1        One year                No               Mailed check   \n",
+       "2  Month-to-month               Yes               Mailed check   \n",
+       "3        One year                No  Bank transfer (automatic)   \n",
+       "4  Month-to-month               Yes           Electronic check   \n",
+       "\n",
+       "  monthly_charges  total_charges churn  \n",
+       "0           29.85          29.85    No  \n",
+       "1           56.95         1889.5    No  \n",
+       "2           53.85         108.15   Yes  \n",
+       "3           42.30        1840.75    No  \n",
+       "4           70.70         151.65   Yes  \n",
+       "\n",
+       "[5 rows x 21 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Check if the dataset contains nulls\n"
+    "#1. import the provided dataset to dataframe (telecom_customer_churn.csv)\n",
+    "df=pd.read_csv('telecom_customer_churn.csv')\n",
+    "#2. change the settings to display all the columns\n",
+    "#3. check the number of rows and columns\n",
+    "df.shape\n",
+    "#4. check the top 5 rows\n",
+    "df.head()\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['customer_id', 'gender', 'senior_citizen', 'partner', 'dependents',\n",
+       "       'tenure', 'phone_service', 'multiple_lines', 'internet_service',\n",
+       "       'online_security', 'online_backup', 'device_protection', 'tech_support',\n",
+       "       'streaming_tv', 'streaming_movies', 'contract', 'paperless_billing',\n",
+       "       'payment_method', 'monthly_charges', 'total_charges', 'churn'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#check the datatype of all columns\n",
-    "\n"
+    "#display all the column names\n",
+    "df.columns\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "customer_id          0\n",
+       "gender               0\n",
+       "senior_citizen       0\n",
+       "partner              0\n",
+       "dependents           0\n",
+       "tenure               0\n",
+       "phone_service        0\n",
+       "multiple_lines       0\n",
+       "internet_service     0\n",
+       "online_security      0\n",
+       "online_backup        0\n",
+       "device_protection    0\n",
+       "tech_support         0\n",
+       "streaming_tv         0\n",
+       "streaming_movies     0\n",
+       "contract             0\n",
+       "paperless_billing    0\n",
+       "payment_method       0\n",
+       "monthly_charges      0\n",
+       "total_charges        0\n",
+       "churn                0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check if the dataset contains nulls\n",
+    "df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "customer_id           object\n",
+       "gender                object\n",
+       "senior_citizen         int64\n",
+       "partner               object\n",
+       "dependents            object\n",
+       "tenure                 int64\n",
+       "phone_service         object\n",
+       "multiple_lines        object\n",
+       "internet_service      object\n",
+       "online_security       object\n",
+       "online_backup         object\n",
+       "device_protection     object\n",
+       "tech_support          object\n",
+       "streaming_tv          object\n",
+       "streaming_movies      object\n",
+       "contract              object\n",
+       "paperless_billing     object\n",
+       "payment_method        object\n",
+       "monthly_charges      float64\n",
+       "total_charges         object\n",
+       "churn                 object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#check the datatype of all columns\n",
+    "df.dtypes\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Fix the datatype\n",
     "#convert the datatype of 'monthly_charges', 'total_charges', 'tenure' to numeric datatype (pd.to_numeric)\n",
-    "\n",
+    "col_to_num=['monthly_charges', 'total_charges', 'tenure']\n",
+    "df[col_to_num]=df[col_to_num].apply(pd.to_numeric,errors='coerce')\n",
     "\n"
    ]
   },
@@ -100,10 +400,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mean:64.76\n",
+      "median:70.35\n",
+      "mode:20.05\n"
+     ]
+    }
+   ],
+   "source": [
+    "m=df.monthly_charges.mean()\n",
+    "print(f'mean:{m:.2f}')\n",
+    "md=df.monthly_charges.median()\n",
+    "print(f'median:{md:.2f}')\n",
+    "me=df.monthly_charges.mode()\n",
+    "print(f'mode:{me[0]:.2f}')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -114,10 +431,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25th percentile:401.45\n",
+      "50th percentile:1397.47\n",
+      "75th percentile:3794.74\n"
+     ]
+    }
+   ],
+   "source": [
+    "percrntile=df.total_charges.quantile([0.25,0.50,0.75])\n",
+    "print(f'''25th percentile:{percrntile[0.25]:.2f}\n",
+    "50th percentile:{percrntile[0.50]:.2f}\n",
+    "75th percentile:{percrntile[0.75]:.2f}''')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -130,10 +462,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "range: 100.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "mx=df.monthly_charges.max()\n",
+    "mn=df.monthly_charges.min()\n",
+    "print('range:',mx-mn)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -144,10 +488,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(25.1)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ch=df[df['churn']=='No']['monthly_charges'].quantile(0.25)\n",
+    "ch"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -158,10 +516,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "third q: 2331.3\n"
+     ]
+    }
+   ],
+   "source": [
+    "th=df[df['churn']=='Yes']['total_charges'].quantile(0.75)\n",
+    "print('third q:',th)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -172,10 +541,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mode of payment method: Electronic check\n"
+     ]
+    }
+   ],
+   "source": [
+    "md=df.loc[df['churn']=='Yes','payment_method'].mode()\n",
+    "print('mode of payment method:',md[0])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -186,17 +566,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mean: 1164.4605740181269\n"
+     ]
+    }
+   ],
    "source": [
     "# Filter the rows based on the churn status and contract type\n",
-    "\n",
+    "ft=df.loc[(df['churn']=='Yes') & (df['contract']=='Month-to-month')]\n",
     "\n",
     "# Calculate the mean of the total charges column\n",
+    "mean=ft['total_charges'].mean()\n",
     "\n",
-    "\n",
-    "# Print the result\n"
+    "# Print the result\n",
+    "print('mean:',mean)"
    ]
   },
   {
@@ -208,17 +597,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "median: 64.0\n"
+     ]
+    }
+   ],
    "source": [
     "# Filter the rows based on the churn status and contract type\n",
-    "\n",
+    "filtered=df.loc[(df['churn']=='No') &(df['contract']=='Two year')]\n",
     "\n",
     "# Calculate the median of the tenure column\n",
+    "med=filtered['tenure'].median()\n",
     "\n",
-    "\n",
-    "# Print the result\n"
+    "# Print the result\n",
+    "print('median:',med)"
    ]
   }
  ],
@@ -238,7 +636,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
